Created Dashboard List in Main Page.

--- a/XRDemo/MainPage.xaml
+++ b/XRDemo/MainPage.xaml
@@ -1,7 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:XRDemo" x:Class="XRDemo.MainPage">
-    <StackLayout>
-        <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+    <StackLayout Margin="10, 35, 10, 0">
+        <Label Text="Multiple Demos" FontSize="Large" HorizontalTextAlignment="Center" />
+        <ListView x:Name="listViewDemo" ItemSelected="OnListViewItemSelected" ItemTapped="OnListViewItemTappedAsync">
+            <ListView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Basic UI Demo</x:String>
+                    <x:String>Webserivce Demo</x:String>
+                    <x:String>Database Demo</x:String>
+                    <x:String>Bluetooth Demo</x:String>
+                </x:Array>
+            </ListView.ItemsSource>
+        </ListView>
     </StackLayout>
 </ContentPage>
