--- a/XRDemo/SqliteDemo/NoteEntryPage.xaml
+++ b/XRDemo/SqliteDemo/NoteEntryPage.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="XRDemo.SqliteDemo.NoteEntryPage">
-    <StackLayout Margin="20">
+    <StackLayout Margin="10, 35, 0, 0">
         <Editor Placeholder="Enter your note" Text="{Binding Text}" HeightRequest="100" />
         <Grid>
             <Grid.ColumnDefinitions>
