--- a/XRDemo/MainPage.xaml
+++ b/XRDemo/MainPage.xaml
@@ -11,6 +11,8 @@
                     <x:String>Basic UI Demo</x:String>
                     <x:String>WebService Demo</x:String>
                     <x:String>Database Demo</x:String>
+                    <x:String>Notification Demo</x:String>
+                    <x:String>CPP Demo</x:String>
                 </x:Array>
             </ListView.ItemsSource>
         </ListView>
